# mcp-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: azure_governed_server.py  local_governed_server.py  quickstart_server.py
examples/policies/: tool-access.yaml
src/mcp_harness/: __init__.py  cli.py  errors.py
src/mcp_harness/auth/: __init__.py  anonymous.py  api_key.py  azure_ad.py  base.py  chained.py
src/mcp_harness/core/: __init__.py  context.py  harness.py  middleware.py  principal.py
src/mcp_harness/governance/: __init__.py  audit.py  cost_tracking.py  quotas.py  sinks.py
src/mcp_harness/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/mcp_harness/policy/: __init__.py  allow_list.py  redaction.py
src/mcp_harness/resilience/: __init__.py  circuit_breaker.py  retry.py
src/mcp_harness/testing/: __init__.py  client.py  fixtures.py
tests/: conftest.py  test_audit.py  test_auth.py  test_cli.py  test_cli_scaffold.py  test_cost_tracking.py  test_fastmcp_integration.py  test_from_fastmcp.py  test_observability.py  test_pipeline.py  test_policy.py  test_quotas.py  test_resilience.py
